force-app/main/default/objects/pdffiller_sfree__CBConfig__c/pdffiller_sfree__CBConfig__c.object-meta.xml
<CustomObject>
    <label>Custom Button Configuration</label>
    <nameField>
        <label>Custom Button Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Button Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>