force-app/main/default/objects/pdffiller_sfree__CBConfig__c/fields/pdffiller_sfree__airSlate_Button_Id__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__airSlate_Button_Id__c</fullName>
    <label>airSlate Button Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>