force-app/main/default/objects/pdffiller_sfree__CBConfig__c/fields/pdffiller_sfree__InitialObject__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__InitialObject__c</fullName>
    <label>InitialObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>