force-app/main/default/objects/pdffiller_sfree__CBConfig__c/fields/pdffiller_sfree__Layouts__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Layouts__c</fullName>
    <label>Layouts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>