force-app/main/default/objects/pdffiller_sfree__CBConfig__c/fields/pdffiller_sfree__ListView__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__ListView__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ListView</label>
    <type>Checkbox</type>
</CustomField>